deploy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  # - port:
  #     number: 80
  #     name: http
  #     protocol: HTTP
  #   hosts:
  #   - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: demo-credential
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: linedoctor
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
  - match:
    route:
    - destination:
        host: api
        port:
          number: 8080
