deploy/injecting-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-virtualservice
spec:
  hosts:
  - payment
  http:
  - fault:
      delay:
        fixedDelay: 10s
        percentage: 
          value: 80
    route:
      - destination:
          host: payment
