deploy/timeout-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
  - api
  http:
  - route:
    - destination:
        host: api
    timeout: 2s
  - route:
    - destination:
        host: api
    retries:
      attempts: 2
      perTryTimeout: 2s
